Fix banner on play page when viewing on small screen 650px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -454,6 +454,10 @@ footer{
     #contact {
         padding-left: 20px;
     }
+
+    #play {
+        width: 640px;
+    }
 }
 
 /* For small screen sizes from 550px wide and down */
